removed decomposed parts from hashCode and equals methods